zero-trust-gitops-platform/policies/tests/require-readonly-rootfs/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-readonly-rootfs-test
policies:
  - ../../workload-hardening/require-readonly-rootfs.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: require-readonly-rootfs
    rule: check-readonly-rootfs
    resources:
      - compliant-pod
    kind: Pod
    result: pass
  - policy: require-readonly-rootfs
    rule: check-readonly-rootfs
    resources:
      - noncompliant-pod
    kind: Pod
    result: fail
